Adjust for JDK 21 and make tests work on JDK 25